nginx-svc-load.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-service
  labels:
    app: nginx-loadbalancer
spec:
  type: LoadBalancer
  externalIPs:
  - 10.211.203.96
  selector:
    app: nginx-loadbalancer
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  - port: 443
    name: https
    targetPort: 443
    protocol: TCP
