nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-service
  labels:
    app: nginx-loadbalancer
spec:
  type: NodePort
  selector:
    app: nginx-loadbalancer
  ports:
  - port: 80
    targetPort: 80
