nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx-application.com
    http:
      paths:
      - backend:
          serviceName: load-service
          servicePort: 80
